k8s/my-speed/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-speed-service
spec:
  selector:
    app: my-speed
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5216
      targetPort: 5216
