k8s/my-speed/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-speed-ingress
  annotations:
    kubernetes.io/ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: speed.kappa.costwynn.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-speed-service
                port:
                  number: 5216
